--- a/src/main/webapp/scripts/shared/lists/status/tatamiStatusList.html
+++ b/src/main/webapp/scripts/shared/lists/status/tatamiStatusList.html
@@ -18,7 +18,7 @@
                             </a>
                         </div>
                         <div class="status-content-container" ng-init="expanded = false" ng-click="getShares(status, $index); expanded = !expanded">
-                            <h5 class="statusitem-name" ng-click="console()">
+                            <h5 class="statusitem-name">
                                 <small ng-if="status.type == 'SHARE'">
                                     <span class="glyphicon glyphicon-retweet">&nbsp;</span>
                                     <a ui-sref="profileStatuses({ email: status.sharedByUsername })">
@@ -132,6 +132,7 @@
                                         </button>
                                         <button ng-if="status.yours || isAdmin" ng-click="deleteStatus(status, $index,('status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
                                             <i class="glyphicon glyphicon-trash"></i>
+                                            <i>{{profile.username}}</i>
                                             <span translate="status.delete"></span>
                                         </button>
                                         <md-menu ng-if="!status.yours">
@@ -141,17 +142,17 @@
                                             </button>
                                             <md-menu-content width ="3">
                                                 <md-menu-item>
-                                                    <md-button class="btn-link status-action" ng-click="hideStatus(status, $index)">
+                                                    <md-button aria-label="test" class="btn-link status-action" ng-click="hideStatus(status, $index)">
                                                         <span translate="status.hide"></span>
                                                     </md-button>
                                                 </md-menu-item>
                                                 <md-menu-item>
-                                                    <md-button class="btn-link status-action">
+                                                    <md-button aria-label="test" class="btn-link status-action" ng-click="reportStatus(status.statusId)">
                                                         <span translate="status.report"></span>
                                                     </md-button>
                                                 </md-menu-item>
                                                 <md-menu-item>
-                                                    <md-button class="btn-link status-action">
+                                                    <md-button aria-label="test" class="btn-link status-action" ng-click="blockUsers(status.username, $index)">
                                                         <span translate="status.block"></span>
                                                     </md-button>
                                                 </md-menu-item>
@@ -168,6 +169,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
