added report service to index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -231,6 +231,7 @@
     <script src="scripts/shared/services/GeolocService.js"></script>
     <script src="scripts/shared/services/PostModalService.js"></script>
     <script src="scripts/shared/services/block.service.js"></script>
+    <script src="scripts/shared/services/reported.status.service.js"></script>
     <script src="scripts/shared/filters/PlaceholderFilter.js"></script>
     <script src="scripts/shared/filters/MarkdownFilter.js"></script>
     <script src="scripts/shared/filters/EmoticonFilter.js"></script>
