add area for job description on profile page

--- a/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
+++ b/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
@@ -45,6 +45,17 @@
                 </p>
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <span class="glyphicon glyphicon-info-sign"></span>
+                <span translate="">Job Description</span>
+            </div>
+            <div class="panel-body">
+                <p>
+                    {{user.jobDescription}}
+                </p>
+            </div>
+        </div>
     </section>
     <section class="hidden-phone tag-trends">
         <div class="panel panel-default">
