--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -52,6 +52,12 @@
                         <input name="phoneNumber" type="text" size="10" maxlength="40" class="form-control" ng-model="userProfile.phoneNumber">
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="jobDescription" class="col-sm-2 control-label">Job Description</label>
+                    <div class="col-sm-10">
+                        <input name="jobDescription" type="text" size="10" maxlength="1000" class="form-control" ng-model="userProfile.jobDescription">
+                    </div>
+                </div>
 
 
 
