fix broken test AccountResourceIntTest by adding necessary jobDescription fields, show line breaks for job description on profile page

--- a/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
+++ b/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
@@ -51,9 +51,7 @@
                 <span translate="">Job Description</span>
             </div>
             <div class="panel-body">
-                <p>
-                    {{user.jobDescription}}
-                </p>
+                <p ng-bind-html="user.jobDescription"></p>
             </div>
         </div>
     </section>
