--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -194,15 +194,17 @@
     <script src="scripts/app/account/users/users.js"></script>
     <script src="scripts/app/account/users/users.controller.js"></script>
 
-        <script src="scripts/app/account/users/list/search/search.js"></script>
-        <script src="scripts/app/account/users/list/search/search.controller.js"></script>
-        <script src="scripts/app/account/users/list/recommended/recommended.js"></script>
-        <script src="scripts/app/account/users/list/recommended/recommended.controller.js"></script>
-        <script src="scripts/app/account/users/list/following/following.js"></script>
-        <script src="scripts/app/account/users/list/following/following.controller.js"></script>
-        <script src="scripts/app/account/users/list/list.js"></script>
-        <script src="scripts/app/account/users/list/list.directive.js"></script>
-        <script src="scripts/app/account/users/list/list.controller.js"></script>
+    <script src="scripts/app/account/users/list/search/search.js"></script>
+    <script src="scripts/app/account/users/list/search/search.controller.js"></script>
+    <script src="scripts/app/account/users/list/recommended/recommended.js"></script>
+    <script src="scripts/app/account/users/list/recommended/recommended.controller.js"></script>
+    <script src="scripts/app/account/users/list/following/following.js"></script>
+    <script src="scripts/app/account/users/list/following/following.controller.js"></script>
+    <script src="scripts/app/account/users/list/list.js"></script>
+    <script src="scripts/app/account/users/list/list.directive.js"></script>
+    <script src="scripts/app/account/users/list/list.controller.js"></script>
+    <script src="scripts/app/account/users/list/blocked/blocked.users.js"></script>
+    <script src="scripts/app/account/users/list/blocked/blocked.users.controllers.js"></script>
 
 
     <script src="scripts/app/account/groups/groups.js"></script>
