add page for admins to view reported statuses

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -171,6 +171,8 @@
     <script src="scripts/app/admin/user-management/user-management-delete-dialog.controller.js"></script>
     <script src="scripts/app/admin/user-management/user-management.controller.js"></script>
     <script src="scripts/app/admin/user-management/user-management.js"></script>
+    <script src="scripts/app/admin/reported-statuses/reported-statuses.controller.js"></script>
+    <script src="scripts/app/admin/reported-statuses/reported-statuses.js"></script>
     <script src="scripts/app/error/error.js"></script>
     <script src="bower_components/messageformat/locale/en.js"></script>
     <script src="bower_components/messageformat/locale/fr.js"></script>
