--- a/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
+++ b/src/main/webapp/scripts/app/home/profile/sidebar/profileSidebar.html
@@ -48,7 +48,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-info-sign"></span>
-                <span translate="">Job Description</span>
+                <span translate="home.profile.sidebar.jobExperience">Job Description</span>
             </div>
             <div class="panel-body">
                 <p ng-bind-html="user.jobDescription"></p>
