when creating a new user, use english as default language to prevent future problems of user not having a language

--- a/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
@@ -67,7 +67,7 @@
 
         <div class="form-group">
             <label translate="user-management.langKey">LangKey</label>
-            <select class="form-control" name="langKey" ng-model="user.langKey"
+            <select class="form-control" name="langKey" ng-model="userLang"
                     ng-options="language as language for language in languages track by language">
             </select>
         </div>
