--- a/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management-dialog.html
@@ -67,16 +67,24 @@
 
         <div class="form-group">
             <label translate="user-management.langKey">LangKey</label>
-            <select class="form-control" name="langKey" ng-model="userLang"
-                    ng-options="language as language for language in languages track by language">
+            <select class="form-control" name="langKey" ng-model="user.langKey"
+                    ng-options="language as language for language in languages track by language" required="true">
             </select>
+            <p class="help-block"
+               ng-show="editForm.email.$error.required" translate="entity.validation.required">
+                This field is required.
+            </p>
         </div>
 
         <div class="form-group">
             <label translate="user-management.profiles">Profiles</label>
             <select class="form-control" multiple name="authority" ng-model="user.authorities"
-                    ng-options="authority for authority in authorities">
+                    ng-options="authority for authority in authorities" required="true">
             </select>
+            <p class="help-block"
+               ng-show="editForm.email.$error.required" translate="entity.validation.required">
+                This field is required.
+            </p>
         </div>
     </div>
     <div class="modal-footer">
